Tech News: fix max lines & scrollbar

--- a/Full-Stack Course/1. HTML & CSS/5. Tech News/styles/header.css
+++ b/Full-Stack Course/1. HTML & CSS/5. Tech News/styles/header.css
@@ -13,7 +13,7 @@ header {
         & ul {
             padding-block: .875rem;
 
-            overflow-x: scroll;
+            overflow-x: auto;
             white-space: nowrap;
 
             font: var(--span);
